jEdit 5.0 version history
       (changes since jEdit 4.5.2)
:encoding=UTF-8:

{{{ Version 5.0pre2

Thanks to Jarek Czekalski, Eric Le Lay, Matthieu Casanova, Tom Power,
and Alan Ezust for contributing to this release.

{{{ Bug fixes

- Fix "Customize This Menu..." item in context menu options (#3554895 Tom Power)

- The macro Display_Abbreviations is broken (#3539691 Matthieu Casanova)

- Fix pressing return in parent files of the VFS browser that do not
  browse the selected folder as it should (patch #3543499 by Eric Le Lay)

}}}
{{{ API
- New method MiscUtilities.openInDesktop() (Alan Ezust)
}}}
}}}


{{{ Version 5.0pre1

Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust, Dale
Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw, peibl, Robert Schwenn,
Martin Raspe, Max Funk, SPennington, Ingo Tomahogh, Jarek Czekalski, Jojaba,
Stephen Blackheath, Milan Černil, Makarius, Chris Sullins, Peter C. Chapin,
Thomas Meyer, Tom Power and Donovaly for contributing to this release.

{{{ Bug fixes

- Fixed exception in dockable window system when loading a plugin using
  jar libraries (#3532429 Matthieu Casanova)

- The plugin description in install panel now supports html
  (#3509183 Matthieu Casanova)

- The mirror "Plugin Central default" now works as auto selecting
  mirror and is used by default. Previous default was hardcoded "switch"
  (mirror.switch.ch) as workaround, but one could easily stuck on broken
  "Plugin Central default" and got strange errors.
  (#2913393, #3501210 - Kazutoshi Satoda)

- Avoided annoying behavior of electric keys that canceled obvious
  manual indentation. Now they take effect only when the current level
  of indentation is same with automatic indentation.
  (#1936678, #2332140 Jarek Czekalski, Kazutoshi Satoda)

- Fixed "Backup on every save" resets file permissions. Renaming of the file
  was replaced with copying. (#1803073 Jarek Czekalski)

- Added backup of remote files, for example opened with FTP plugin.